--- a/ShelterEvidency/Views/BasicInfoView.xaml
+++ b/ShelterEvidency/Views/BasicInfoView.xaml
@@ -10,7 +10,7 @@
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         FontFamily="{DynamicResource MaterialDesignFont}"
              mc:Ignorable="d" 
-             d:DesignHeight="1000" d:DesignWidth="1500">
+             d:DesignHeight="1024" d:DesignWidth="1280">
 
     <UserControl.Resources>
 
@@ -20,7 +20,7 @@
 
     </UserControl.Resources>
 
-    <Grid IsEnabled="{Binding IsWorking, Converter={StaticResource boolConvert}}" Margin="5">
+    <Grid Height="Auto" IsEnabled="{Binding IsWorking, Converter={StaticResource boolConvert}}" Margin="5">
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition/>
@@ -31,46 +31,46 @@
             <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
 
-        <Grid Margin="30,0,0,0" Grid.Column="1" Grid.ColumnSpan="2">
+        <Grid Margin="30,0,0,0" Grid.Column="1" Height="Auto" Grid.ColumnSpan="2">
             <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
 
-                    <GroupBox Header="Základní údaje" Grid.ColumnSpan="2" Padding="50,20,50,9" Margin="15,25,15,15"  Style="{DynamicResource MaterialDesignGroupBox}"
+            <GroupBox Header="Základní údaje" Grid.ColumnSpan="2" Height="Auto" Padding="50,20,50,9" Margin="15,25,15,15"  Style="{DynamicResource MaterialDesignGroupBox}"
                           materialDesign:ShadowAssist.ShadowDepth="Depth3"
                           BorderThickness="0" FontSize="14">
-                        <StackPanel>
+                <StackPanel Height="Auto">
 
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition/>
                                 <ColumnDefinition/>
                             </Grid.ColumnDefinitions>
-                        <TextBox x:Name="ID" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="ID" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=ID, Mode=OneTime}" IsReadOnly="True"/>
+                        <TextBox x:Name="ID" Height="Auto" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="ID" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=ID, Mode=OneTime}" IsReadOnly="True"/>
                         </Grid>
 
-                    <TextBox x:Name="AnimalName" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Jméno" TextWrapping="Wrap" Margin="5" Padding="2"/>
-                    <TextBox x:Name="ChipNumber" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Číslo čipu/tetování:" TextWrapping="Wrap" Margin="5" Padding="2"/>
+                    <TextBox Height="Auto" x:Name="AnimalName" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Jméno" TextWrapping="Wrap" Margin="5" Padding="2"/>
+                    <TextBox Height="Auto" x:Name="ChipNumber" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Číslo čipu/tetování:" TextWrapping="Wrap" Margin="5" Padding="2"/>
 
-                    <Grid>
+                    <Grid Height="Auto">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition/>
                             <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
-                        <ComboBox Margin="5" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True" materialDesign:HintAssist.Hint="Druh" ItemsSource="{Binding Path=SpeciesList, Mode=OneWay}" DisplayMemberPath="SpeciesName" SelectedValuePath="Id" SelectedValue="{Binding Path=Species, Mode=TwoWay}"/>
-                        <ComboBox Margin="5" VerticalAlignment="Center" Grid.Column="1" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True" materialDesign:HintAssist.Hint="Plemeno" ItemsSource="{Binding Path=BreedList, Mode=OneWay}" DisplayMemberPath="BreedName" SelectedValuePath="Id" SelectedValue="{Binding Path=Breed, Mode=TwoWay}"/>
+                        <ComboBox Height="Auto" Margin="5" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True" materialDesign:HintAssist.Hint="Druh" ItemsSource="{Binding Path=SpeciesList, Mode=OneWay}" DisplayMemberPath="SpeciesName" SelectedValuePath="Id" SelectedValue="{Binding Path=Species, Mode=TwoWay}"/>
+                        <ComboBox Height="Auto" Margin="5" VerticalAlignment="Center" Grid.Column="1" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True" materialDesign:HintAssist.Hint="Plemeno" ItemsSource="{Binding Path=BreedList, Mode=OneWay}" DisplayMemberPath="BreedName" SelectedValuePath="Id" SelectedValue="{Binding Path=Breed, Mode=TwoWay}"/>
 
                     </Grid>
 
-                    <Grid>
+                    <Grid Height="Auto">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition/>
                             <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
-                        <ComboBox Margin="5" VerticalAlignment="Center" Grid.Column="1" Style="{StaticResource MaterialDesignFloatingHintComboBox}" materialDesign:HintAssist.Hint="Pohlaví" ItemsSource="{Binding Path=SexList, Mode=OneWay}" DisplayMemberPath="SexName" SelectedValuePath="Id" SelectedValue="{Binding Path=Sex, Mode=TwoWay}" />
+                        <ComboBox Height="Auto" Margin="5" VerticalAlignment="Center" Grid.Column="1" Style="{StaticResource MaterialDesignFloatingHintComboBox}" materialDesign:HintAssist.Hint="Pohlaví" ItemsSource="{Binding Path=SexList, Mode=OneWay}" DisplayMemberPath="SexName" SelectedValuePath="Id" SelectedValue="{Binding Path=Sex, Mode=TwoWay}" />
 
-                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                        <StackPanel Height="Auto" Orientation="Horizontal" HorizontalAlignment="Center">
                             <ToggleButton VerticalAlignment="Center"
                                   Style="{StaticResource MaterialDesignSwitchAccentToggleButton}"
                                   IsChecked="{Binding Path = Castration, Mode = TwoWay}" Margin="5" IsThreeState="False"/>
@@ -78,24 +78,24 @@
                         </StackPanel>
 
                     </Grid>
-                            
 
-                            
-                            <Grid>
+
+
+                    <Grid Height="Auto">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition/>
                             <ColumnDefinition/>
                             <ColumnDefinition Width="2*"/>
                         </Grid.ColumnDefinitions>
 
-                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                        <StackPanel Orientation="Horizontal" Height="Auto" HorizontalAlignment="Center">
                                 <ToggleButton VerticalAlignment="Center"
                                   Style="{StaticResource MaterialDesignSwitchAccentToggleButton}"
                                   IsChecked="{Binding Path = InShelter, Mode = TwoWay}" Margin="5" IsThreeState="False"/>
                                 <TextBlock VerticalAlignment="Center" Text="v útulku" Margin="10,0,0,0"></TextBlock>
                             </StackPanel>
 
-                        <StackPanel Orientation="Horizontal" Grid.Column="1" HorizontalAlignment="Center">
+                        <StackPanel Orientation="Horizontal" Height="Auto" Grid.Column="1" HorizontalAlignment="Center">
                             <ToggleButton VerticalAlignment="Center"
                                   Style="{StaticResource MaterialDesignSwitchAccentToggleButton}"
                                   IsChecked="{Binding Path = IsDead, Mode = TwoWay}" Margin="5" IsThreeState="False"/>
@@ -104,7 +104,7 @@
 
 
 
-                        <DatePicker Margin="5" VerticalAlignment="Center" Grid.Column="2"  materialDesign:HintAssist.Hint="Datum narození" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=BirthDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedDateFormat="Short"/>
+                        <DatePicker Margin="5" Height="Auto" Width="Auto" VerticalAlignment="Center" Grid.Column="2"  materialDesign:HintAssist.Hint="Datum narození" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=BirthDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedDateFormat="Short"/>
                     </Grid>
 
 
@@ -122,10 +122,10 @@
                 <RowDefinition Height="50"/>
             </Grid.RowDefinitions>
 
-            <GroupBox Header="Další údaje" Padding="20,9" Margin="15,5"  Style="{DynamicResource MaterialDesignGroupBox}"
+            <GroupBox Header="Další údaje" Margin="15,5" Height="Auto"  Style="{DynamicResource MaterialDesignGroupBox}"
                           materialDesign:ShadowAssist.ShadowDepth="Depth3"
                           BorderThickness="0" Grid.IsSharedSizeScope="True" FontSize="13" >
-                <Grid>
+                <Grid Height="Auto">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
                         <ColumnDefinition/>
@@ -140,24 +140,24 @@
                             <RowDefinition/>
                             <RowDefinition/>
                         </Grid.RowDefinitions>
-                        <ComboBox Margin="5" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True" materialDesign:HintAssist.Hint="Kříženec" ItemsSource="{Binding Path=CrossBreedList, Mode=OneWay}" DisplayMemberPath="BreedName" SelectedValuePath="Id" SelectedValue="{Binding Path=CrossBreed, Mode=TwoWay}"/>
-                        <ComboBox Margin="5" VerticalAlignment="Center" Grid.Row="1" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True"  materialDesign:HintAssist.Hint="Barva srsti" ItemsSource="{Binding Path=FurColorList, Mode=OneWay}" DisplayMemberPath="FurColorName" SelectedValuePath="Id" SelectedValue="{Binding Path=FurColor, Mode=TwoWay}"/>
-                        <ComboBox Margin="5" VerticalAlignment="Center" Grid.Row="2" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True" materialDesign:HintAssist.Hint="Typ srsti" ItemsSource="{Binding Path=CoatTypeList, Mode=OneWay}" DisplayMemberPath="CoatTypeName" SelectedValuePath="Id" SelectedValue="{Binding Path=CoatType, Mode=TwoWay}"/>
-                        <ComboBox Margin="5" VerticalAlignment="Center" Grid.Row="3" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True"  materialDesign:HintAssist.Hint="Veterinář"  ItemsSource="{Binding Path=VetList, Mode=OneWay}" DisplayMemberPath="TitledFullName" SelectedValuePath="ID" SelectedValue="{Binding Path=Vet, Mode=TwoWay}" />
-                        <ComboBox Margin="5" VerticalAlignment="Center" Grid.Row="4" ItemsSource="{Binding Path=OwnerList, Mode=OneWay}" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True"  materialDesign:HintAssist.Hint="Původní majitel"  DisplayMemberPath="TitledFullName" SelectedValuePath="ID" SelectedValue="{Binding Path=Owner, Mode=TwoWay}" />
-                        <ComboBox Margin="5" VerticalAlignment="Center" Grid.Row="5" ItemsSource="{Binding Path=OwnerList, Mode=OneWay}" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True"  materialDesign:HintAssist.Hint="Nový majitel"  DisplayMemberPath="TitledFullName" SelectedValuePath="ID" SelectedValue="{Binding Path=NewOwner, Mode=TwoWay}"/>
+                        <ComboBox Margin="5" Height="Auto" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True" materialDesign:HintAssist.Hint="Kříženec" ItemsSource="{Binding Path=CrossBreedList, Mode=OneWay}" DisplayMemberPath="BreedName" SelectedValuePath="Id" SelectedValue="{Binding Path=CrossBreed, Mode=TwoWay}"/>
+                        <ComboBox Margin="5" Height="Auto" VerticalAlignment="Center" Grid.Row="1" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True"  materialDesign:HintAssist.Hint="Barva srsti" ItemsSource="{Binding Path=FurColorList, Mode=OneWay}" DisplayMemberPath="FurColorName" SelectedValuePath="Id" SelectedValue="{Binding Path=FurColor, Mode=TwoWay}"/>
+                        <ComboBox Margin="5" Height="Auto" VerticalAlignment="Center" Grid.Row="2" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True" materialDesign:HintAssist.Hint="Typ srsti" ItemsSource="{Binding Path=CoatTypeList, Mode=OneWay}" DisplayMemberPath="CoatTypeName" SelectedValuePath="Id" SelectedValue="{Binding Path=CoatType, Mode=TwoWay}"/>
+                        <ComboBox Margin="5" Height="Auto" VerticalAlignment="Center" Grid.Row="3" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True"  materialDesign:HintAssist.Hint="Veterinář"  ItemsSource="{Binding Path=VetList, Mode=OneWay}" DisplayMemberPath="TitledFullName" SelectedValuePath="ID" SelectedValue="{Binding Path=Vet, Mode=TwoWay}" />
+                        <ComboBox Margin="5" Height="Auto" VerticalAlignment="Center" Grid.Row="4" ItemsSource="{Binding Path=OwnerList, Mode=OneWay}" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True"  materialDesign:HintAssist.Hint="Původní majitel"  DisplayMemberPath="TitledFullName" SelectedValuePath="ID" SelectedValue="{Binding Path=Owner, Mode=TwoWay}" />
+                        <ComboBox Margin="5" Height="Auto" VerticalAlignment="Center" Grid.Row="5" ItemsSource="{Binding Path=OwnerList, Mode=OneWay}" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True"  materialDesign:HintAssist.Hint="Nový majitel"  DisplayMemberPath="TitledFullName" SelectedValuePath="ID" SelectedValue="{Binding Path=NewOwner, Mode=TwoWay}"/>
                     </Grid>
 
-                    <Grid Grid.Column="1">
+                    <Grid Grid.Column="1" Height="Auto">
                         <Grid.RowDefinitions>
                             <RowDefinition/>
                             <RowDefinition/>
                             <RowDefinition Height="4*"/>
                         </Grid.RowDefinitions>
-                        <TextBox x:Name="Weight" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Váha (kg)"  TextWrapping="Wrap" Margin="5" Padding="2"/>
-                        <TextBox x:Name="FeedRation" VerticalAlignment="Center" Grid.Row="1" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Krmná dávka (g)" TextWrapping="Wrap" Margin="5" Padding="2"/>
+                        <TextBox x:Name="Weight" Height="Auto" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Váha (kg)"  TextWrapping="Wrap" Margin="5" Padding="2"/>
+                        <TextBox x:Name="FeedRation" Height="Auto" VerticalAlignment="Center" Grid.Row="1" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Krmná dávka (g)" TextWrapping="Wrap" Margin="5" Padding="2"/>
 
-                        <TextBox Grid.Row="2"  Style="{StaticResource MaterialDesignOutlinedTextFieldTextBox}" materialDesign:HintAssist.Hint="Poznámka"  x:Name="Note" TextWrapping="Wrap" Margin="5" Padding="2"/>
+                        <TextBox Grid.Row="2" Height="Auto"  Style="{StaticResource MaterialDesignOutlinedTextFieldTextBox}" materialDesign:HintAssist.Hint="Poznámka"  x:Name="Note" TextWrapping="Wrap" Margin="5" Padding="2"/>
                     </Grid>
 
                 </Grid>
