--- a/ShelterEvidency/Views/ComboBoxSettingsView.xaml
+++ b/ShelterEvidency/Views/ComboBoxSettingsView.xaml
@@ -58,13 +58,13 @@
                 <Grid Grid.Row="2" Margin="10,0" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="5*"/>
-                        <ColumnDefinition Width="100"/>
+                        <ColumnDefinition Width="1*"/>
                     </Grid.ColumnDefinitions>
-                    <TextBox x:Name="NewSpeciesName" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="Název nového druhu" TextWrapping="Wrap" Margin="0,5" Padding="2"/>
+                    <TextBox  x:Name="NewSpeciesName" Width="Auto" Height="Auto" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="Název nového druhu" TextWrapping="Wrap" Margin="0,5" Padding="2"/>
 
-                    <Button Grid.Column="1" x:Name="AddSpecies"  IsEnabled="{Binding NewSpeciesSelected}"
+                    <Button Grid.Column="1" Width="Auto" Height="Auto" HorizontalAlignment="Center" VerticalAlignment="Center" x:Name="AddSpecies"  IsEnabled="{Binding NewSpeciesSelected}"
                     Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}">
-                        <materialDesign:PackIcon
+                        <materialDesign:PackIcon Margin="5"
                         Kind="Add"
                         Height="24"
                         Width="24" />
@@ -117,17 +117,17 @@
                 <Grid Grid.Row="2" Margin="10,0" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="5*"/>
-                        <ColumnDefinition Width="2.5*"/>
-                        <ColumnDefinition Width="100"/>
+                        <ColumnDefinition Width="2.8*"/>
+                        <ColumnDefinition Width="1*"/>
                     </Grid.ColumnDefinitions>
-                    <TextBox x:Name="NewBreedName" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="Název nového plemena" TextWrapping="Wrap" Margin="0,5" Padding="2"/>
+                    <TextBox x:Name="NewBreedName"  Width="Auto" Height="Auto" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="Název nového plemena" TextWrapping="Wrap" Margin="0,5" Padding="2"/>
 
-                    <ComboBox Margin="5" VerticalAlignment="Center" Grid.Column="1" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True" materialDesign:HintAssist.Hint="Druh" ItemsSource="{Binding Path=SpeciesList, Mode=OneWay}" DisplayMemberPath="SpeciesName" SelectedValuePath="Id" SelectedValue="{Binding Path=NewBreedSpecies, Mode=OneWayToSource}"/>
+                    <ComboBox Margin="5"  Width="Auto" Height="Auto" VerticalAlignment="Center" Grid.Column="1" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True" materialDesign:HintAssist.Hint="Druh" ItemsSource="{Binding Path=SpeciesList, Mode=OneWay}" DisplayMemberPath="SpeciesName" SelectedValuePath="Id" SelectedValue="{Binding Path=NewBreedSpecies, Mode=OneWayToSource}"/>
 
 
-                    <Button Grid.Column="2" x:Name="AddBreed" IsEnabled="{Binding NewBreedSelected}"
+                    <Button Width="Auto" Height="Auto" HorizontalAlignment="Center" VerticalAlignment="Center"  Grid.Column="2" x:Name="AddBreed" IsEnabled="{Binding NewBreedSelected}"
                     Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}">
-                        <materialDesign:PackIcon
+                        <materialDesign:PackIcon Margin="5"
                         Kind="Add"
                         Height="24"
                         Width="24" />
@@ -179,13 +179,13 @@
                 <Grid Grid.Row="2" Margin="10,0" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="5*"/>
-                        <ColumnDefinition Width="100"/>
+                        <ColumnDefinition Width="1*"/>
                     </Grid.ColumnDefinitions>
-                    <TextBox x:Name="NewCoatTypeName" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="Název nového typu srsti" TextWrapping="Wrap" Margin="0,5" Padding="2"/>
+                    <TextBox x:Name="NewCoatTypeName"  Width="Auto" Height="Auto" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="Název nového typu srsti" TextWrapping="Wrap" Margin="0,5" Padding="2"/>
 
-                    <Button Grid.Column="1" x:Name="AddCoatType"  IsEnabled="{Binding NewCoatTypeSelected}"
+                    <Button Grid.Column="1" x:Name="AddCoatType" Width="Auto" Height="Auto" HorizontalAlignment="Center" VerticalAlignment="Center"  IsEnabled="{Binding NewCoatTypeSelected}"
                     Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}">
-                        <materialDesign:PackIcon
+                        <materialDesign:PackIcon Margin="5"
                         Kind="Add"
                         Height="24"
                         Width="24" />
@@ -236,13 +236,13 @@
                 <Grid Grid.Row="2" Margin="10,0" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="5*"/>
-                        <ColumnDefinition Width="100"/>
+                        <ColumnDefinition Width="1*"/>
                     </Grid.ColumnDefinitions>
-                    <TextBox x:Name="NewFurColorName" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="Název nové barvy srsti" TextWrapping="Wrap" Margin="0,5" Padding="2"/>
+                    <TextBox x:Name="NewFurColorName" Width="Auto" Height="Auto" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="Název nové barvy srsti" TextWrapping="Wrap" Margin="0,5" Padding="2"/>
 
-                    <Button Grid.Column="1" x:Name="AddFurColor"  IsEnabled="{Binding NewFurColorSelected}"
+                    <Button Grid.Column="1" x:Name="AddFurColor" Width="Auto" Height="Auto" HorizontalAlignment="Center" VerticalAlignment="Center"  IsEnabled="{Binding NewFurColorSelected}"
                     Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}">
-                        <materialDesign:PackIcon
+                        <materialDesign:PackIcon Margin="5"
                         Kind="Add"
                         Height="24"
                         Width="24" />
