--- a/ShelterEvidency/Views/IncidentsView.xaml
+++ b/ShelterEvidency/Views/IncidentsView.xaml
@@ -19,7 +19,7 @@
 
     </UserControl.Resources>
 
-    <Grid Margin="5" IsEnabled="{Binding IsWorking, Converter={StaticResource boolConvert}}">
+    <Grid Margin="5" Height="Auto" Width="Auto" IsEnabled="{Binding IsWorking, Converter={StaticResource boolConvert}}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
@@ -31,20 +31,20 @@
 
         <Grid Grid.Column="1" Grid.RowSpan="2" Margin="5">
             <Grid.RowDefinitions>
-                <RowDefinition Height="80"/>
+                <RowDefinition Height="0.1*"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
 
-            <Grid>
+            <Grid Height="Auto" Width="Auto">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
-                    <ColumnDefinition Width="90"/>
-                    <ColumnDefinition Width="90"/>
-                    <ColumnDefinition Width="50"/>
+                    <ColumnDefinition Width="0.5*"/>
+                    <ColumnDefinition Width="0.5*"/>
+                    <ColumnDefinition Width="0.3*"/>
                 </Grid.ColumnDefinitions>
 
-                <materialDesign:PopupBox Grid.Row="1" Grid.Column="7" HorizontalAlignment="Right" Width="50" Height="50"
+                <materialDesign:PopupBox Grid.Row="1" Grid.Column="7" HorizontalAlignment="Center" Height="Auto" Width="Auto"
                   Style="{StaticResource MaterialDesignPopupBox}"
                   PlacementMode="BottomAndAlignRightEdges">
                     <StackPanel>
@@ -73,19 +73,19 @@
                     </StackPanel>
                 </materialDesign:PopupBox>
 
-                <DatePicker Margin="5" materialDesign:HintAssist.Hint="Od data" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=Since, Mode=OneWayToSource,  UpdateSourceTrigger=PropertyChanged}" SelectedDateFormat="Short"/>
-                <DatePicker Grid.Column="1" Margin="5" materialDesign:HintAssist.Hint="Do data" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=To, Mode=OneWayToSource,  UpdateSourceTrigger=PropertyChanged}" SelectedDateFormat="Short"/>
+                <DatePicker Margin="5" Height="Auto" Width="Auto" materialDesign:HintAssist.Hint="Od data" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=Since, Mode=OneWayToSource,  UpdateSourceTrigger=PropertyChanged}" SelectedDateFormat="Short"/>
+                <DatePicker Grid.Column="1" Height="Auto" Width="Auto" Margin="5" materialDesign:HintAssist.Hint="Do data" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=To, Mode=OneWayToSource,  UpdateSourceTrigger=PropertyChanged}" SelectedDateFormat="Short"/>
 
-                <Button x:Name="DeleteIncident" IsEnabled="{Binding IsSelected}" Grid.Column="3"  Style="{StaticResource MaterialDesignIconForegroundButton}">
-                    <materialDesign:PackIcon
+                <Button x:Name="DeleteIncident" Height="Auto" Width="Auto" IsEnabled="{Binding IsSelected}" Grid.Column="3"  Style="{StaticResource MaterialDesignIconForegroundButton}">
+                    <materialDesign:PackIcon Margin="5"
                 Kind="DeleteForever"
                 Height="24"
                 Width="24" />
                 </Button>
 
-                <Button Style="{StaticResource MaterialDesignFloatingActionAccentButton}"  Grid.Column="2"
+                <Button Style="{StaticResource MaterialDesignFloatingActionAccentButton}"  Grid.Column="2" Height="Auto" Width="Auto"
                 x:Name="Filter" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,2,2" >
-                    <materialDesign:PackIcon
+                    <materialDesign:PackIcon Margin="5"
                 Kind="Update"
                 Height="30"
                 Width="30" />
@@ -111,13 +111,13 @@
         <materialDesign:Card Margin="10"
                     materialDesign:ShadowAssist.ShadowDepth="Depth1">
 
-            <Grid  IsEnabled="{Binding IsSelected}" >
+            <Grid Height="Auto" Width="Auto"  IsEnabled="{Binding IsSelected}" >
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="0.2*"/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
 
-                <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="15,10,0,0">
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Height="Auto" Width="Auto" Margin="15,10,0,0">
 
                     <materialDesign:PackIcon Kind="AlertRhombusOutline" VerticalAlignment="Center" HorizontalAlignment="Center" Width="50" Height="50" Opacity="0.3" Margin="0" />
 
@@ -130,28 +130,28 @@
                 </StackPanel>
 
 
-                <Grid Grid.Row="1" Margin="15,0">
+                <Grid Grid.Row="1" Margin="15,0" Height="Auto" Width="Auto">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="25"/>
+                        <RowDefinition Height="35"/>
                         <RowDefinition/>
                         <RowDefinition/>
                         <RowDefinition Height="1.6*"/>
                         <RowDefinition/>
                     </Grid.RowDefinitions>
 
-                    <TextBlock Margin="0,10,0,0"
+                    <TextBlock Margin="0,10,0,0" Height="Auto" Width="Auto"
                         Style="{StaticResource MaterialDesignSubtitle1TextBlock}">
                       Závažnost incidentu:
                     </TextBlock>
 
-                    <DatePicker Margin="5" Grid.Row="2" materialDesign:HintAssist.Hint="Datum incidentu" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=Date, Mode=TwoWay,  UpdateSourceTrigger=PropertyChanged}" SelectedDateFormat="Long" Grid.ColumnSpan="2"/>
-                    <Slider x:Name="Severity" Grid.Row="1"  Style="{StaticResource MaterialDesignDiscreteSlider}" materialDesign:HintAssist.Hint="Závažnost incidentu" Minimum="1" Maximum="10" Margin="5,0,5,5" Grid.ColumnSpan="2" />
+                    <DatePicker Margin="5" Height="Auto" Width="Auto" Grid.Row="2" materialDesign:HintAssist.Hint="Datum incidentu" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=Date, Mode=TwoWay,  UpdateSourceTrigger=PropertyChanged}" SelectedDateFormat="Long" Grid.ColumnSpan="2"/>
+                    <Slider x:Name="Severity" Height="Auto" Width="Auto" Grid.Row="1"  Style="{StaticResource MaterialDesignDiscreteSlider}" materialDesign:HintAssist.Hint="Závažnost incidentu" Minimum="1" Maximum="10" Margin="5,0,5,5" Grid.ColumnSpan="2" />
 
 
-                    <TextBox x:Name="Description" Style="{StaticResource MaterialDesignOutlinedTextFieldTextBox}" materialDesign:HintAssist.Hint="Popis incidentu" Grid.Row="3" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" MinHeight="50" Text="{Binding Path=Description, Mode=TwoWay}" Grid.ColumnSpan="2"/>
+                    <TextBox x:Name="Description" Height="Auto" Width="Auto" Style="{StaticResource MaterialDesignOutlinedTextFieldTextBox}" materialDesign:HintAssist.Hint="Popis incidentu" Grid.Row="3" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" MinHeight="50" Text="{Binding Path=Description, Mode=TwoWay}" Grid.ColumnSpan="2"/>
 
                     <Button x:Name="UpdateIncident" Style="{StaticResource MaterialDesignRaisedAccentButton}" Width="100"  Grid.Row="4" Content="Upravit" Grid.Column="1" />
                 </Grid>
@@ -162,13 +162,13 @@
         <materialDesign:Card Grid.Row="1" Margin="10"
                     materialDesign:ShadowAssist.ShadowDepth="Depth1">
 
-            <Grid>
+            <Grid Height="Auto" Width="Auto">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="0.2*"/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
 
-                <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="15,10,0,0">
+                <StackPanel Height="Auto" Width="Auto" Orientation="Horizontal" VerticalAlignment="Center" Margin="15,10,0,0">
 
                     <materialDesign:PackIcon Kind="MapMarkerAlert" VerticalAlignment="Center" HorizontalAlignment="Center" Width="50" Height="50" Opacity="0.3" Margin="0" />
 
@@ -180,28 +180,28 @@
 
                 </StackPanel>
 
-                <Grid Grid.Row="1" Margin="15,0">
+                <Grid Grid.Row="1" Height="Auto" Width="Auto" Margin="15,0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="25"/>
+                        <RowDefinition Height="35"/>
                         <RowDefinition/>
                         <RowDefinition/>
                         <RowDefinition Height="1.6*"/>
                         <RowDefinition/>
                     </Grid.RowDefinitions>
 
-                    <TextBlock Margin="0,10,0,0"
+                    <TextBlock Margin="0,10,0,0" Height="Auto" Width="Auto"
                         Style="{StaticResource MaterialDesignSubtitle1TextBlock}">
                       Závažnost incidentu:
                     </TextBlock>
 
-                    <DatePicker Margin="5" Grid.Row="2" materialDesign:HintAssist.Hint="Datum incidentu" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=NewDate, Mode=TwoWay,  UpdateSourceTrigger=PropertyChanged}" SelectedDateFormat="Long" Grid.ColumnSpan="2"/>
+                    <DatePicker Height="Auto" Width="Auto" Margin="5" Grid.Row="2" materialDesign:HintAssist.Hint="Datum incidentu" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=NewDate, Mode=TwoWay,  UpdateSourceTrigger=PropertyChanged}" SelectedDateFormat="Long" Grid.ColumnSpan="2"/>
                     <Slider x:Name="NewSeverity" Grid.Row="1"  Style="{StaticResource MaterialDesignDiscreteSlider}" materialDesign:HintAssist.Hint="Závažnost incidentu" Minimum="1" Maximum="10" Margin="5,0,5,5" Grid.ColumnSpan="2" />
 
 
-                    <TextBox x:Name="NewDescription" Style="{StaticResource MaterialDesignOutlinedTextFieldTextBox}" materialDesign:HintAssist.Hint="Popis incidentu" Grid.Row="3" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" MinHeight="50" Text="{Binding Path=NewDescription, Mode=TwoWay}" Grid.ColumnSpan="2"/>
+                    <TextBox Height="Auto" Width="Auto" x:Name="NewDescription" Style="{StaticResource MaterialDesignOutlinedTextFieldTextBox}" materialDesign:HintAssist.Hint="Popis incidentu" Grid.Row="3" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" MinHeight="50" Text="{Binding Path=NewDescription, Mode=TwoWay}" Grid.ColumnSpan="2"/>
 
                     <Button x:Name="CreateNewIncident" Style="{StaticResource MaterialDesignRaisedAccentButton}" Width="100"  Grid.Row="4" Content="Vytvořit" Grid.Column="1"/>
                 </Grid>
